--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -534,6 +534,46 @@ a {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
+.left-20 {
+  left: 5rem;
+}
+
+.left-40 {
+  left: 10rem;
+}
+
+.left-128 {
+  left: 32rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -555,20 +595,56 @@ a {
   height: 0.25rem;
 }
 
-.w-8 {
-  width: 2rem;
+.h-128 {
+  height: 32rem;
 }
 
-.w-7 {
-  width: 1.75rem;
+.h-full {
+  height: 100%;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-24 {
   width: 6rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-full {
+  width: 100%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .flex-1 {
@@ -581,6 +657,10 @@ a {
 
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -603,6 +683,18 @@ a {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .whitespace-nowrap {
@@ -645,9 +737,19 @@ a {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
 .from-movie-red {
   --tw-gradient-from: #bc1a45;
   --tw-gradient-to: rgb(188 26 69 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent;
+  --tw-gradient-to: rgb(0 0 0 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -655,9 +757,18 @@ a {
   --tw-gradient-to: #dddddd;
 }
 
+.to-black {
+  --tw-gradient-to: #000;
+}
+
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .py-6 {
@@ -688,13 +799,32 @@ a {
   padding-right: 1rem;
 }
 
-.font-gemunu {
-  font-family: Gemunu Libre, sans-serif;
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -705,6 +835,10 @@ a {
   text-transform: uppercase;
 }
 
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
 .text-movie-grey {
   --tw-text-opacity: 1;
   color: rgb(221 221 221 / var(--tw-text-opacity));
@@ -712,6 +846,11 @@ a {
 
 .text-transparent {
   color: transparent;
+}
+
+.text-movie-melon {
+  --tw-text-opacity: 1;
+  color: rgb(255 211 105 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -730,9 +869,18 @@ a {
   transition-duration: 500ms;
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .hover\:bg-rose-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(225 29 72 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-movie-red:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 26 69 / var(--tw-bg-opacity));
 }
 
 .hover\:text-movie-melon:hover {
@@ -745,9 +893,30 @@ a {
   color: rgb(221 221 221 / var(--tw-text-opacity));
 }
 
+.hover\:text-movie-red:hover {
+  --tw-text-opacity: 1;
+  color: rgb(188 26 69 / var(--tw-text-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.group:hover .group-hover\:mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.group:hover .group-hover\:mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.group:hover .group-hover\:mb-20 {
+  margin-bottom: 5rem;
+}
+
+.group:hover .group-hover\:mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .group:hover .group-hover\:text-movie-red {
@@ -768,56 +937,42 @@ a {
     display: none;
   }
 
-  .md\:w-5 {
-    width: 1.25rem;
-  }
-
-  .md\:w-6 {
-    width: 1.5rem;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
-  }
-
-  .md\:w-24 {
-    width: 6rem;
-  }
-
-  .md\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-movie-grey {
-    --tw-bg-opacity: 1;
-    background-color: rgb(221 221 221 / var(--tw-bg-opacity));
+  .md\:h-96 {
+    height: 24rem;
   }
 
   .md\:pl-0 {
     padding-left: 0px;
   }
-
-  .md\:opacity-0 {
-    opacity: 0;
-  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:bottom-5 {
+    bottom: 1.25rem;
+  }
+
+  .lg\:left-96 {
+    left: 24rem;
+  }
+
+  .lg\:h-128 {
+    height: 32rem;
+  }
+
+  .lg\:h-4 {
+    height: 1rem;
+  }
+
   .lg\:w-44 {
     width: 11rem;
   }
 
-  .lg\:w-12 {
-    width: 3rem;
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
-  .lg\:w-52 {
-    width: 13rem;
-  }
-
-  .lg\:w-6 {
-    width: 1.5rem;
+  .lg\:w-4 {
+    width: 1rem;
   }
 
   .lg\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
@@ -832,14 +987,13 @@ a {
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:bg-movie-grey {
-    --tw-bg-opacity: 1;
-    background-color: rgb(221 221 221 / var(--tw-bg-opacity));
-  }
-
   .lg\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .lg\:pl-0 {
+    padding-left: 0px;
   }
 
   .lg\:text-6xl {
@@ -852,7 +1006,12 @@ a {
     line-height: 1.75rem;
   }
 
-  .lg\:opacity-0 {
-    opacity: 0;
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .group:hover .lg\:group-hover\:mb-20 {
+    margin-bottom: 5rem;
   }
 }
